--- a/index.html
+++ b/index.html
@@ -3,28 +3,83 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Rubik:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Omnifood</title>
   </head>
   <body>
-    <section class="section-hero">
-      <div class="container hero-text-box">
-        <h1 class="heading-primary">
-          A healthy meal delivered to your door, every single day
-        </h1>
-        <p class="hero-description">
-          The smart 365-days-per-year food subscription that will make you eat
-          healthy again. Tailored to your personal tastes and nutritional needs.
-          We have delivered 250,000+ meals last year!
-        </p>
-        <!-- buttons should be used for actions where anchor should
-             be used for linking/going to other page -->
-        <a href="#" class="btn">Start eating well</a>
-        <a href="#" class="btn">Learn more &darr;</a>
-      </div>
-      <div class="container hero-img-box">
-        <img src="img/hero.png" alt="hero" class="hero-img" />
-      </div>
-    </section>
+    <header class="header">
+      <img class="logo" src="img/omnifood-logo.png" alt="omifood logo" />
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+          <li>
+            <a class="main-nav-link" href="#">Section 1</a>
+          </li>
+          <li><a class="main-nav-link" href="#">Section 2</a></li>
+          <li><a class="main-nav-link" href="#">Section 3</a></li>
+          <li><a class="main-nav-link" href="#">Section4</a></li>
+          <li><a class="main-nav-link nav-cta" href="#">Section5</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="section-hero">
+        <!-- create a fixed size container -->
+        <div class="hero">
+          <div class="hero-text-box">
+            <h1 class="heading-primary">
+              A healthy meal delivered to your door, every single day
+            </h1>
+            <p class="hero-description">
+              The smart 365-days-per-year food subscription that will make you
+              eat healthy again. Tailored to your personal tastes and
+              nutritional needs.
+            </p>
+            <!-- buttons should be used for actions where anchor should
+            be used for linking/going to other page -->
+            <!-- instead of add margin-right property to the element itself. 
+              We use a helper class 'margin-right-sm'. So it wont create
+              conflict when we reuse the element -->
+            <a href="#" class="btn btn--full margin-right-sm"
+              >Start eating well</a
+            >
+            <a href="#" class="btn btn--outline">Learn more &darr;</a>
+            <div class="delivered-meals">
+              <div class="delivered-imgs">
+                <img src="img/customers/customer-1.jpg" alt="Customer photo" />
+                <img src="img/customers/customer-2.jpg" alt="Customer photo" />
+                <img src="img/customers/customer-3.jpg" alt="Customer photo" />
+                <img src="img/customers/customer-4.jpg" alt="Customer photo" />
+                <img src="img/customers/customer-5.jpg" alt="Customer photo" />
+                <img src="img/customers/customer-6.jpg" alt="Customer photo" />
+              </div>
+              <p class="deliverd-text">
+                <span>250,000+</span> meals delivered last year!
+              </p>
+            </div>
+          </div>
+          <div class="hero-img-box">
+            <img
+              src="img/hero.png"
+              alt="woman enjoy food,meals in storage container,and food bowls on a table"
+              class="hero-img"
+            />
+          </div>
+        </div>
+      </section>
+      <section class="section-how">
+        <div class="container grid grid--2-cols">
+          <div>Test 1</div>
+          <div>Test 2</div>
+          <div>Test 3</div>
+          <div>Test 4</div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
