--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li>
-            <a class="main-nav-link" href="#">Section 1</a>
+            <a class="main-nav-link" href="#">How it works</a>
           </li>
-          <li><a class="main-nav-link" href="#">Section 2</a></li>
-          <li><a class="main-nav-link" href="#">Section 3</a></li>
-          <li><a class="main-nav-link" href="#">Section4</a></li>
-          <li><a class="main-nav-link nav-cta" href="#">Section5</a></li>
+          <li><a class="main-nav-link" href="#">Meals</a></li>
+          <li><a class="main-nav-link" href="#">Testimonials</a></li>
+          <li><a class="main-nav-link" href="#">Pricing</a></li>
+          <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
         </ul>
       </nav>
     </header>
@@ -170,7 +170,7 @@
           </h2>
         </div>
 
-        <div class="container grid grid--3-cols margin-bottom-md">
+        <div class="container grid grid--3-cols">
           <div class="meal">
             <img
               src="img/meals/meal-1.jpg"
@@ -578,7 +578,7 @@
                     <option value="facebook">Facebook</option>
                   </select>
                 </div>
-                <button class="btn">Sign up now</button>
+                <button class="btn btn--form">Sign up now</button>
               </form>
             </div>
             <!-- use role:"img" and describe aria-label for accessibility -->
@@ -593,6 +593,69 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="container grid grid--footer">
+        <div class="logo-col">
+          <a href="#"
+            ><img class="logo" src="img/omnifood-logo.png" alt="omifood logo"
+          /></a>
+          <ul class="social-links">
+            <li>
+              <ion-icon name="logo-instagram" class="social-icon"></ion-icon>
+            </li>
+            <li>
+              <ion-icon name="logo-facebook" class="social-icon"></ion-icon>
+            </li>
+            <li>
+              <ion-icon name="logo-tumblr" class="social-icon"></ion-icon>
+            </li>
+          </ul>
+          <p class="copyright">
+            Copyright &copy; 2027 by Omifood, Inc. All rights reserved
+          </p>
+        </div>
+        <div class="address-col">
+          <p class="footer-heading">Contact us</p>
+          <address class="contacts">
+            <p class="address">
+              623 Harrison St., 2nd Floor, San Francisco, CA 94107
+            </p>
+            <a class="footer-link" href="tel:415-201-6370">415-201-6370</a
+            ><br />
+            <a class="footer-link" href="mailto:hello@omnifood.com"
+              >hello@omnifood.com</a
+            >
+          </address>
+        </div>
+        <nav class="nav-col">
+          <p class="footer-heading">Account</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">Create account</a></li>
+            <li><a class="footer-link" href="#">Sign in</a></li>
+            <li><a class="footer-link" href="#">iOS app</a></li>
+            <li><a class="footer-link" href="#">Android app</a></li>
+          </ul>
+        </nav>
+        <nav class="nav-col">
+          <p class="footer-heading">Company</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">About Omnifood</a></li>
+            <li><a class="footer-link" href="#">For Business</a></li>
+            <li><a class="footer-link" href="#">Cooking partners</a></li>
+            <li><a class="footer-link" href="#">Careers</a></li>
+          </ul>
+        </nav>
+
+        <nav class="nav-col">
+          <p class="footer-heading">Resources</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">Recipe directory</a></li>
+            <li><a class="footer-link" href="#">Help center</a></li>
+            <li><a class="footer-link" href="#">Privacy & terms</a></li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
