css style update

--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
               </li>
             </ul>
             <div class="plan-sign-up">
-              <a href="#" class="btn btn--full margin-right-sm"
+              <a href="#section-cta" class="btn btn--full margin-right-sm"
                 >Start eating well</a
               >
             </div>
@@ -539,7 +539,7 @@
               </li>
             </ul>
             <div class="plan-sign-up">
-              <a href="#" class="btn btn--full margin-right-sm"
+              <a href="#section-cta" class="btn btn--full margin-right-sm"
                 >Start eating well</a
               >
             </div>
