--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
                 eating well today. You can cancel or pause anytime. And the
                 first meal is on us!
               </p>
-              <form class="cta-form" action="#">
+              <form class="cta-form" netlify name="sign-up">
                 <div>
                   <label for="full-name">Full Name:</label>
                   <input
@@ -608,6 +608,7 @@
                     placeholder="John Smith"
                     id="full-name"
                     required
+                    name="full-name"
                   />
                 </div>
                 <div>
@@ -617,12 +618,13 @@
                     id="email"
                     required
                     placeholder="me@example.com"
+                    name="email"
                   />
                 </div>
 
                 <div>
                   <label for="select-where">Where did you here from us?</label>
-                  <select name="" id="select-where" required>
+                  <select name="select-where" id="select-where" required>
                     <option value="">Please choose one option:</option>
                     <option value="friends">Friends and family</option>
                     <option value="youtube">Youtube videos</option>
