--- a/index.html
+++ b/index.html
@@ -600,15 +600,15 @@
                 eating well today. You can cancel or pause anytime. And the
                 first meal is on us!
               </p>
-              <form class="cta-form" netlify name="sign-up">
+              <form class="cta-form" name="sign-up" netlify>
                 <div>
                   <label for="full-name">Full Name:</label>
                   <input
                     type="text"
                     placeholder="John Smith"
+                    name="full-name"
                     id="full-name"
                     required
-                    name="full-name"
                   />
                 </div>
                 <div>
@@ -616,9 +616,9 @@
                   <input
                     type="email"
                     id="email"
-                    required
-                    placeholder="me@example.com"
                     name="email"
+                    placeholder="me@example.com"
+                    required
                   />
                 </div>
 
