--- a/index.html
+++ b/index.html
@@ -632,7 +632,11 @@
                     <option value="facebook">Facebook</option>
                   </select>
                 </div>
-                <button class="btn btn--form" aria-label="button-to-form">
+                <button
+                  class="btn btn--form"
+                  aria-label="button-to-form"
+                  type="submit"
+                >
                   Sign up now
                 </button>
               </form>
