make sticky header smoother

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     <header class="header">
-      <a href="#section-hero"
+      <a href="#"
         ><img class="logo" src="img/omnifood-logo.png" alt="omifood logo"
       /></a>
       <nav class="main-nav">
